# halman

./: README.md  default.nix  halman.cabal  kalman.m  shell.nix  stack.yaml
Visualizer/Assets/Scenes/: Airplane.unity
Visualizer/Assets/Scripts/: Interface.cs
Visualizer/ProjectSettings/: ProjectSettings.asset
app/: Main.hs
examples/: CannonBall.hs  VanderPol.hs
src/: Kalman.hs  Lib.hs  Sim.hs
src/Estimation/: Kalman.hs  Sim.hs
src/Math/: Frames.hs  Spatial.hs  Vectorize.hs
src/Models/: Aircraft.hs  DumbCopter.hs
src/Physics/: Aerodynamics.hs  Constants.hs  RigidBody.hs
src/Sim/: Dumpcopter.hs  Sim.hs
